feat: Separate user texts into /texts page, profile shows stats

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,6 +32,9 @@
                             <a class="nav-link" href="/profile">Profile</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/texts">My Texts</a> <%# New link for user texts %>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/add_text">Add Text</a>
                         </li>
                         <%# Removed "My Files" link %>
